--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
-description: A new Flutter project.
-version: 0.0.3
+description: Foundation for `Fluttify`.
+version: 0.0.4
 author: yohom <382146139@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
