--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.1.2+1
+version: 0.1.3
 author: yohom <382146139@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
