--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="me.yohom.foundation_fluttify">
+        package="me.yohom.foundation_fluttify">
+
+    <application>
+        <receiver android:name=".FluttifyBroadcastReceiver" />
+    </application>
 </manifest>
