chore: bump version.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.4.5+1
+version: 0.4.6
 author: yohom <yohombao@gmail.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
