--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.4.6
-author: yohom <yohombao@gmail.com>
+version: 0.4.7
+author: yohom <yohombao@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
+  flutter: ">=1.12.13 <2.0.0"
 
 dependencies:
   flutter:
