--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  decorated_flutter: ^0.10.0
+  cupertino_icons: ^0.1.3
+  decorated_flutter: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
