--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.8.10-dev.2
+version: 0.8.10
 author: yohom <yohombao@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
