--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.9.0-pre.0
+version: 0.8.13
 author: yohom <yohombao@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
