--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: yohom <yohombao@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.12.13 <2.0.0"
 
 dependencies:
