--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.11.2-dev.4
-author: yohom <yohombao@qq.com>
+version: 0.12.0-dev.0
+authors:
+  - yohom <yohombao@qq.com>
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
