--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.12.0-dev.1
-authors:
-  - yohom <yohombao@qq.com>
+version: 0.12.1
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
