--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.12.1
+version: 0.12.1+1
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
