--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: foundation_fluttify
 description: Foundation for `Fluttify`.
-version: 0.13.0-rc.3
+version: 0.13.0
 homepage: https://github.com/fluttify-project/foundation_fluttify
 
 environment:
